force-app/main/default/objects/ContentVersion/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <description>This field is to identify if any operation needs to perform based on Action Type.</description>
    <label>Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Downloaded From IGMS</fullName>
            </value>
            <value>
                <fullName>Uploaded To IGMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>