force-app/main/default/objects/ContentVersion/fields/Content_Source_API__c.field-meta.xml
<CustomField>
    <fullName>Content_Source_API__c</fullName>
    <label>Content Source API</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Renewal Policy Details</fullName>
            </value>
            <value>
                <fullName>Renewal Check</fullName>
            </value>
            <value>
                <fullName>Renewal Group Check</fullName>
            </value>
            <value>
                <fullName>Health Return</fullName>
            </value>
            <value>
                <fullName>Fitness Assessment</fullName>
            </value>
            <value>
                <fullName>AppRegDetails</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>