force-app/main/default/objects/ContentVersion/fields/Delete_Content__c.field-meta.xml
<CustomField>
    <fullName>Delete_Content__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/cmp/c__ASF_deleteContentURL?c__recordId=&quot;+Id, &quot;Delete Content&quot;, &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delete Content</label>
    <type>Text</type>
</CustomField>