force-app/main/default/objects/ContentVersion/fields/EBOT_Attachment_ID__c.field-meta.xml
<CustomField>
    <fullName>EBOT_Attachment_ID__c</fullName>
    <description>This field is in ABSLI EBOT Attachment Flow. EBOT to send EBOT Attachment ID in UpdateBOTAPI.</description>
    <label>EBOT Attachment ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>