force-app/main/default/objects/ContentVersion/fields/For_Registered_Customer__c.field-meta.xml
<CustomField>
    <fullName>For_Registered_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>For Registered Customer</label>
    <type>Checkbox</type>
</CustomField>