force-app/main/default/objects/ContentVersion/fields/Is_Email_Body__c.field-meta.xml
<CustomField>
    <fullName>Is_Email_Body__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Email Body</label>
    <type>Checkbox</type>
</CustomField>