force-app/main/default/objects/ContentVersion/fields/IsSTP__c.field-meta.xml
<CustomField>
    <fullName>IsSTP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsSTP</label>
    <type>Checkbox</type>
</CustomField>